Fix right sidebar on mobile

--- a/src/components/main/layout.scss
+++ b/src/components/main/layout.scss
@@ -12,6 +12,7 @@ body {
 // Style in common for sidebars and main area:
 #layout {
   display: flex;
+  overflow: hidden; // Disable scrolling on layout
   background: var(--bg-content);
 
   .header {
